add animation and modal

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,7 @@
         <nav>
           <ul class="list nav-pages-list">
             <li class="nav-pages-item">
-              <a href="./index.html" class="link nav-list-item "
-                >Студія</a
-              >
+              <a href="./index.html" class="link nav-list-item">Студія</a>
             </li>
             <li class="nav-pages-item">
               <a href="./portfolio.html" class="link nav-list-item current"
@@ -88,13 +86,20 @@
           <ul class="list portfolio-work-list">
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
-                <img
-                  src="./images/portfolio-img-1-min.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                  class="portfoli-item-img"
-                />
+                <div class="portfolio-item-thumb">
+                  <img
+                    src="./images/portfolio-img-1-min.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                    class="portfoli-item-img"
+                  />
+                  <p class="portfolio-item-cover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-item-title-and-description">
                   <h2 class="portfolio-item-title">Технокряк</h2>
                   <p class="portfolio-item-description">Веб-сайт</p>
@@ -103,13 +108,20 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
-                <img
-                  src="./images/portfolio-img-2-min.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                  class="portfoli-item-img"
-                />
+                <div class="portfolio-item-thumb">
+                  <img
+                    src="./images/portfolio-img-2-min.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                    class="portfoli-item-img"
+                  />
+                  <p class="portfolio-item-cover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-item-title-and-description">
                   <h2 class="portfolio-item-title">
                     Постер New Orlean vs Golden Star
@@ -261,7 +273,7 @@
           </address>
         </div>
         <div class="footer-social-medias">
-          <h3 class="feature-title">приєднуйтесь</h3>
+          <p class="footer-social-medias-title">приєднуйтесь</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
