--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <main>
       <section class="hero">
         <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="btn hero-btn">Замовити послугу</button>
+        <button type="button" class="btn hero-btn" data-modal-open>
+          Замовити послугу
+        </button>
       </section>
 
       <section class="section features">
@@ -127,26 +129,32 @@
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="list">
-            <li class="list-item">
+            <li class="list-item work-item">
               <img
                 src="./images/photo_1.jpg"
                 alt="Людина набирає текст на клавіатурі"
                 width="370"
+                class="work-img"
               />
+              <p class="work-description">Десктопні додатки</p>
             </li>
-            <li class="list-item">
+            <li class="list-item work-item">
               <img
                 src="./images/photo_2.jpg"
                 alt="Людина тримає у лівій руці телефон, а права рука на тачпаді ноутбука"
                 width="370"
+                class="work-img"
               />
+              <p class="work-description">Мобільні додатки</p>
             </li>
-            <li class="list-item">
+            <li class="list-item work-item">
               <img
                 src="./images/photo_3.jpg"
                 alt="Людина тримає в руках планшет на якому зобращено шестикутник заповнений різними кольорами"
                 width="370"
+                class="work-img"
               />
+              <p class="work-description">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -435,7 +443,7 @@
           </address>
         </div>
         <div class="footer-social-medias">
-          <h3 class="feature-title">приєднуйтесь</h3>
+          <p class="footer-social-medias-title">приєднуйтесь</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
@@ -472,5 +480,16 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg class="icon-close-modal" width="18" height="18">
+            <use href="./images/icons-not-min.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
