--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
     <header class="page-header">
       <div class="container main-nav">
         <a href="./index.html" class="link logo">
-          <span class="accent">Web</span>Studio
+          <span class="logo-accent">Web</span>Studio
         </a>
         <nav>
           <ul class="list nav-pages-list">
@@ -415,8 +416,8 @@
     <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-address">
-          <a href="./index.html" class="logo link"
-            ><span class="accent">Web</span>Studio</a
+          <a href="./index.html" class="logo logo-inverse link"
+            ><span class="logo-accent">Web</span>Studio</a
           >
           <address>
             <ul class="list footer-address-list">
@@ -489,7 +490,7 @@
               placeholder="E-mail"
               name="mail"
             />
-            <button class="footer-submit-btn" type="submit">
+            <button class="footer-submit-btn btn" type="submit">
               Підписатися
               <svg class="icon-footer-btn" width="24" height="24">
                 <use href="./images/icons-not-min.svg#icon-send"></use>
@@ -564,7 +565,7 @@
             </label>
           </div>
 
-          <button class="modal-submit-btn" type="submit">Відправити</button>
+          <button class="modal-submit-btn btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
