--- a/index.html
+++ b/index.html
@@ -20,29 +20,31 @@
   </head>
 
   <body>
-    <header class="page-header">
-      <div class="container main-nav">
-        <a href="./index.html" class="link logo">
-          <span class="logo-accent">Web</span>Studio
+    <header class="header">
+      <div class="container header__content">
+        <a href="./index.html" class="logo link">
+          <span class="logo__accent">Web</span>Studio
         </a>
-        <nav>
-          <ul class="list nav-pages-list">
-            <li class="nav-pages-item">
-              <a href="./index.html" class="link nav-list-item current"
+
+        <nav class="navigation">
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation__link link current"
                 >Студія</a
               >
             </li>
-            <li class="nav-pages-item">
-              <a href="./portfolio.html" class="link nav-list-item"
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link link"
                 >Портфоліо</a
               >
             </li>
-            <li class="nav-pages-item">
-              <a href="" class="link nav-list-item">Контакти</a>
+            <li class="navigation__item">
+              <a href="" class="navigation__link link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list header-contact-list">
+
+        <ul class="header-contact-list list">
           <li class="header-contact-item">
             <a href="mailto:info@devstudio.com" class="link contact-list-item">
               <svg class="icon-header-contact" width="16" height="12">
@@ -417,7 +419,7 @@
       <div class="container footer-container">
         <div class="footer-address">
           <a href="./index.html" class="logo logo-inverse link"
-            ><span class="logo-accent">Web</span>Studio</a
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address>
             <ul class="list footer-address-list">
