--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
     <main>
       <section class="section portfolio">
         <div class="container">
-          <h1 class="visually-hidden">Портфоліо</h1>
+          <h1 class="portfolio__title">Портфоліо</h1>
           <ul class="list filter-btn-list">
             <li class="filter-btn-item">
               <button type="button" class="filter-btn current-filter">
