--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__content">
         <a href="./index.html" class="logo logo--header link">
           <span class="logo__accent">Web</span>Studio
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="section portfolio">
@@ -74,15 +74,19 @@
                 Усі
               </button>
             </li>
+
             <li class="filter-btn-item">
               <button type="button" class="filter-btn">Веб-сайти</button>
             </li>
+
             <li class="filter-btn-item">
               <button type="button" class="filter-btn">Додатки</button>
             </li>
+
             <li class="filter-btn-item">
               <button type="button" class="filter-btn">Дизайн</button>
             </li>
+
             <li class="filter-btn-item">
               <button type="button" class="filter-btn">Маркетинг</button>
             </li>
@@ -111,6 +115,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <div class="portfolio-item-thumb">
@@ -135,6 +140,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -150,6 +156,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -165,6 +172,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -180,6 +188,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -197,6 +206,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -212,6 +222,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -227,6 +238,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a href="" class="link portfolio-list-item">
                 <img
@@ -247,7 +259,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer__info-block info-block">
           <a href="./index.html" class="logo logo--footer logo--inverse link"
@@ -335,6 +347,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
